Fix UI regression: .post-tools in SPV should not have stopped being right-aligned.  Regressed in 48b2eab5 .

--- a/scss/single-post-view.scss
+++ b/scss/single-post-view.scss
@@ -64,6 +64,7 @@ body.body.single-post-view {
           margin-bottom: 1.5em;
           width: 100%;
           float: none;
+          text-align: right;
           span.num-likes {
             margin-left: 1em;
           }
